Fixed header alignment bug

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -54,6 +54,7 @@ h1, h2{
 	color: white;
 	text-shadow: 2px 2px black;
 	margin-top: 0px;
+	text-align: left;
 }
 
 ul{
